--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=473
+dock_hsplit_2=356
 dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/Action Button/")
+dock_filesystem_selected_paths=PackedStringArray("res://GlobalScript/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scenes/Action Button/action_button.gd", "res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Main Menu/options.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://GlobalScript/persistence.gd"
-open_help=["@GlobalScope", "Node"]
+selected_script="res://scenes/Main Menu/controls.gd"
+open_help=["@GlobalScope", "AudioServer"]
 script_split_offset=112
 list_split_offset=0
 
