--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://scenes/Action Button/action_button.gd", "res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Main Menu/options.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/video.gd"]
 selected_script="res://scenes/Main Menu/controls.gd"
-open_help=["@GlobalScope", "AudioServer"]
+open_help=["@GlobalScope", "AudioServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap"]
 script_split_offset=112
 list_split_offset=0
 
