--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 15.0,
+"row": 25,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,16 +91,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 33.0,
+"row": 9,
+"scroll_position": 24.0,
 "selection": true,
-"selection_from_column": 33,
-"selection_from_line": 44,
-"selection_to_column": 41,
-"selection_to_line": 44,
+"selection_from_column": 5,
+"selection_from_line": 9,
+"selection_to_column": 11,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
@@ -109,15 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 32,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 41,
-"selection_from_line": 32,
-"selection_to_column": 42,
-"selection_to_line": 32,
+"row": 111,
+"scroll_position": 101.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
