update input fix

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,10 +9,10 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=0
+dock_split_2=-4
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=356
+dock_hsplit_2=127
 dock_hsplit_3=-162
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://scenes/Action Button/action_button.gd", "res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Main Menu/options.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/video.gd"]
 selected_script="res://scenes/Main Menu/controls.gd"
-open_help=["@GlobalScope", "AudioServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap"]
+open_help=["@GlobalScope", "AudioServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node"]
 script_split_offset=112
 list_split_offset=0
 
