--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,32 +12,31 @@ dock_floating={}
 dock_split_2=-4
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
-dock_hsplit_3=-162
+dock_hsplit_2=332
+dock_hsplit_3=-479
 dock_hsplit_4=0
 dock_filesystem_split=0
-dock_filesystem_display_mode=1
+dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
-dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://GlobalScript/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
+dock_filesystem_file_list_display_mode=0
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/Action Button/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://GlobalScript/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Main Menu/main_menu.tscn", "res://scenes/Action Button/action_button.tscn", "res://scenes/Action Button/input_button.tscn")
+open_scenes=PackedStringArray("res://scenes/Main Menu/main_menu.tscn", "res://scenes/Settings/settings.tscn", "res://scenes/Levels/level.tscn", "res://scenes/Pause Menu/pause_menu.tscn")
 current_scene="res://scenes/Main Menu/main_menu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/Action Button/action_button.gd", "res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Main Menu/options.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://scenes/Main Menu/controls.gd"
+open_scripts=["res://scenes/Action Button/action_button.gd", "res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Player/player.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
+selected_script="res://scenes/Pause Menu/pause_menu.gd"
 open_help=["@GlobalScope", "AudioServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node"]
 script_split_offset=112
 list_split_offset=0
@@ -47,3 +46,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
