--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://GlobalScript/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Audio/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/Dice/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Action Button/action_button.tscn", "res://scenes/Action Button/input_button.tscn", "res://scenes/Settings/settings.tscn", "res://scenes/Pause Menu/pause_menu.tscn", "res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Settings/settings_ui.tscn", "res://scenes/Dice/DiceNumber/dice.tscn", "res://scenes/Dice/DiceImage/dice_image.tscn")
-current_scene="res://scenes/Levels/level.tscn"
+open_scenes=PackedStringArray("res://scenes/Settings/settings.tscn", "res://scenes/Pause Menu/pause_menu.tscn", "res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn")
+current_scene="res://scenes/Settings/settings.tscn"
 center_split_offset=-277
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://GlobalScript/Global.gd"
-open_help=["@GlobalScope", "AudioServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node"]
+selected_script="res://scenes/Main Menu/controls.gd"
+open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OS"]
 script_split_offset=112
 list_split_offset=0
 
