--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,10 +35,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -49,10 +49,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -77,10 +77,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 45,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -91,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 49.0,
+"row": 112,
+"scroll_position": 108.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +105,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 3.0,
-"selection": false,
+"row": 25,
+"scroll_position": 14.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 25,
+"selection_to_column": 16,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
 
@@ -119,10 +123,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -165,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
+"row": 17,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
