--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=-4
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=213
-dock_hsplit_3=-162
+dock_hsplit_3=-247
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=1
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://scenes/Main Menu/controls.gd"
-open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OS"]
+selected_script="res://scenes/Main Menu/video.gd"
+open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "Dictionary", "DisplayServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OptionButton", "OS", "Window"]
 script_split_offset=112
 list_split_offset=0
 
