--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Audio/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/Dice/")
+dock_filesystem_selected_paths=PackedStringArray("res://Audio/SFX/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/Dice/", "res://Audio/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Settings/settings.tscn", "res://scenes/Pause Menu/pause_menu.tscn", "res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn")
+open_scenes=PackedStringArray("res://scenes/Settings/settings.tscn", "res://scenes/Pause Menu/pause_menu.tscn", "res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Dice/DiceImage/dice_image.tscn", "res://scenes/Dice/DiceNumber/dice.tscn", "res://scenes/Player/player.tscn")
 current_scene="res://scenes/Settings/settings.tscn"
 center_split_offset=-277
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://scenes/Main Menu/video.gd"
+open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Player/player.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
+selected_script="res://scenes/Main Menu/start.gd"
 open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "Dictionary", "DisplayServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OptionButton", "OS", "Window"]
 script_split_offset=112
 list_split_offset=0
