--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"StaticBody3D",
+"class": &"TacticTile",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/tile.gd"
+}, {
+"base": &"Node3D",
+"class": &"TacticsArena",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/Arena/arena.gd"
+}])
