--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Settings/settings_ui.tscn", "res://scenes/Settings/settings.tscn")
-current_scene="res://scenes/Settings/settings.tscn"
+open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn")
+current_scene="res://scenes/Main Menu/main_menu.tscn"
 center_split_offset=-277
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Player/player.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Settings/settings.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://scenes/Main Menu/controls.gd"
+selected_script="res://scenes/Pause Menu/pause_menu.gd"
 open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "Dictionary", "DisplayServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OptionButton", "OS", "Window"]
 script_split_offset=112
 list_split_offset=0
