learn the code and try to make it work

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,31 +13,31 @@ dock_split_2=-4
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=213
-dock_hsplit_3=-247
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/RayCasting/ray_casting.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/RayCasting/", "res://scenes/Dice/", "res://scenes/Arena/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/sprites/characters/chr_pawn_placeholder.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://scenes/RayCasting/", "res://scenes/Dice/", "res://scenes/Arena/", "res://Assets/", "res://Assets/sprites/", "res://Assets/sprites/labels/", "res://Assets/sprites/characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Player/player.tscn", "res://scenes/Arena/test_arena.tscn", "res://scenes/RayCasting/ray_casting.tscn")
-current_scene="res://scenes/Arena/test_arena.tscn"
-center_split_offset=-192
+open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Player/player.tscn", "res://scenes/Arena/test_arena.tscn", "res://scenes/RayCasting/ray_casting.tscn", "res://scenes/Player3D/player.tscn", "res://scenes/Camera/tactics_camera.tscn")
+current_scene="res://scenes/Camera/tactics_camera.tscn"
+center_split_offset=-484
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/Arena/arena.gd", "res://scenes/Player/player.gd", "res://src/tile.gd", "res://src/utils.gd"]
-selected_script="res://scenes/Arena/arena.gd"
+open_scripts=["res://scenes/Arena/arena.gd", "res://player.gd", "res://tactics_camera.gd", "res://src/tile.gd", "res://src/utils.gd"]
+selected_script="res://tactics_camera.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=0
