--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -10,4 +10,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scenes/Arena/arena.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"TacticsCamera",
+"icon": "",
+"language": &"GDScript",
+"path": "res://tactics_camera.gd"
+}, {
+"base": &"CharacterBody3D",
+"class": &"TacticsPawn",
+"icon": "",
+"language": &"GDScript",
+"path": "res://player.gd"
 }])
