LEARN MORE THE SCRIPT

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,9 +17,27 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://tactics_camera.gd"
 }, {
+"base": &"Node3D",
+"class": &"TacticsLevel",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/Levels/level3D.gd"
+}, {
 "base": &"CharacterBody3D",
 "class": &"TacticsPawn",
 "icon": "",
 "language": &"GDScript",
 "path": "res://player.gd"
+}, {
+"base": &"Node3D",
+"class": &"TacticsPlayerController",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/Levels/player_controller.gd"
+}, {
+"base": &"Control",
+"class": &"TacticsPlayerControllerUI",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/Player Control UI/player_control_ui.gd"
 }])
