--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,57 +9,38 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-4
+dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=213
+dock_hsplit_2=270
 dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< HEAD
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/Settings/settings_ui.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/Settings/", "res://scenes/Pause Menu/", "res://Audio/", "res://Assets/")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/sprites/characters/chr_pawn_placeholder.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://scenes/RayCasting/", "res://scenes/Dice/", "res://scenes/Arena/", "res://Assets/", "res://Assets/sprites/", "res://Assets/sprites/labels/", "res://Assets/sprites/characters/")
->>>>>>> 7caab130a494933139fae73ca919429aef1562db
+<<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://scenes/Settings/settings_ui.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://src/", "res://scenes/", "res://scenes/RayCasting/", "res://scenes/Player3D/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/utils.gd")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
-open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Pause Menu/pause_menu.tscn", "res://scenes/Settings/settings_ui.tscn", "res://scenes/Settings/settings.tscn")
-current_scene="res://scenes/Settings/settings.tscn"
-center_split_offset=-277
+open_scenes=PackedStringArray("res://scenes/Main Menu/main_menu.tscn", "res://scenes/Arena/test_arena.tscn", "res://scenes/Player3D/player.tscn", "res://scenes/Camera/tactics_camera.tscn", "res://scenes/Player Control UI/player_control_ui.tscn", "res://scenes/Levels/level3D.tscn", "res://scenes/RayCasting/ray_casting.tscn")
+current_scene="res://scenes/Levels/level3D.tscn"
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
-
-[ScriptEditor]
-
-open_scripts=["res://scenes/Main Menu/audio.gd", "res://scenes/Main Menu/back_button.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Dice/DiceNumber/dice.gd", "res://scenes/Dice/DiceImage/dice_image.gd", "res://GlobalScript/Global.gd", "res://scenes/Main Menu/options.gd", "res://scenes/Pause Menu/pause_menu.gd", "res://GlobalScript/persistence.gd", "res://scenes/Player/player.gd", "res://scenes/Main Menu/quit.gd", "res://scenes/Settings/settings.gd", "res://scenes/Main Menu/start.gd", "res://scenes/Main Menu/video.gd"]
-selected_script="res://scenes/Main Menu/audio.gd"
-open_help=["@GlobalScope", "AudioServer", "ConfigFile", "Control", "Dictionary", "DisplayServer", "InputEventAction", "InputEventKey", "InputEventMouseButton", "InputMap", "Node", "OptionButton", "OS", "Window"]
-=======
-open_scenes=PackedStringArray("res://scenes/Levels/level.tscn", "res://scenes/Main Menu/main_menu.tscn", "res://scenes/Player/player.tscn", "res://scenes/Arena/test_arena.tscn", "res://scenes/RayCasting/ray_casting.tscn", "res://scenes/Player3D/player.tscn", "res://scenes/Camera/tactics_camera.tscn")
-current_scene="res://scenes/Camera/tactics_camera.tscn"
-center_split_offset=-484
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/Arena/arena.gd", "res://player.gd", "res://tactics_camera.gd", "res://src/tile.gd", "res://src/utils.gd"]
-selected_script="res://tactics_camera.gd"
-open_help=[]
->>>>>>> 7caab130a494933139fae73ca919429aef1562db
-script_split_offset=112
+open_scripts=["res://scenes/Arena/arena.gd", "res://scenes/Main Menu/controls.gd", "res://scenes/Levels/level3D.gd", "res://player.gd", "res://scenes/Levels/player_controller.gd", "res://scenes/Player Control UI/player_control_ui.gd", "res://scenes/RayCasting/ray_casting.gd", "res://scenes/Settings/settings.gd", "res://tactics_camera.gd", "res://src/tile.gd", "res://src/utils.gd"]
+selected_script="res://scenes/Levels/player_controller.gd"
+open_help=["PhysicsRayQueryParameters3D"]
+script_split_offset=209
 list_split_offset=0
 
 [ShaderEditor]
