--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,261 +1,12 @@
-[res://scenes/Main Menu/video.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-<<<<<<< HEAD
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 82,
-"scroll_position": 0.0,
-=======
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 19,
-"scroll_position": 8.0,
->>>>>>> 7caab130a494933139fae73ca919429aef1562db
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/audio.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 55,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-<<<<<<< HEAD
-"row": 26,
-"scroll_position": 9.0,
-=======
-"row": 32,
-"scroll_position": 5.0,
->>>>>>> 7caab130a494933139fae73ca919429aef1562db
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/options.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 11,
-"selection_to_column": 30,
-"selection_to_line": 11,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/back_button.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/quit.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://GlobalScript/persistence.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/controls.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 30,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-<<<<<<< HEAD
-"row": 144,
-=======
-"row": 112,
->>>>>>> 7caab130a494933139fae73ca919429aef1562db
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Pause Menu/pause_menu.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://GlobalScript/Global.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Main Menu/start.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Dice/DiceNumber/dice.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 8,
-"selection_to_column": 32,
-"selection_to_line": 8,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Dice/DiceImage/dice_image.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 39,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Player/player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 1.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scenes/Settings/settings.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://scenes/Arena/arena.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 47,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://src/utils.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 70,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://src/tile.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
+"row": 20,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -266,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 3,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -280,10 +31,130 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 33,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Player Control UI/player_control_ui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Levels/player_controller.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 66,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 67,
+"scroll_position": 56.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Settings/settings.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Main Menu/controls.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 40,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 27,
+"scroll_position": 18.0,
+"selection": true,
+"selection_from_column": 38,
+"selection_from_line": 27,
+"selection_to_column": 40,
+"selection_to_line": 27,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/Levels/level3D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 3.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/tile.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 31,
+"selection_to_column": 21,
+"selection_to_line": 31,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/RayCasting/ray_casting.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 22,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/utils.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
